--- a/reference.bib
+++ b/reference.bib
@@ -157,3 +157,18 @@
     archivePrefix={arXiv},
     primaryClass={cs.RO}
 }
+
+@article{SCOLLO2011129,
+  title = "A statistical approach to evaluate the tephra deposit and ash concentration from PUFF model forecasts",
+  journal = "Journal of Volcanology and Geothermal Research",
+  volume = "200",
+  number = "3",
+  pages = "129 - 142",
+  year = "2011",
+  issn = "0377-0273",
+  doi = "https://doi.org/10.1016/j.jvolgeores.2010.12.004",
+  url = "http://www.sciencedirect.com/science/article/pii/S0377027310003823",
+  author = "S. Scollo and M. Prestifilippo and M. Coltelli and R.A. Peterson and G. Spata",
+  keywords = "ash dispersal, ash forecasting and aviation safety, PUFF model, parametric study and model validation, Mt. Etna",
+  abstract = "In this paper we present a new statistical approach which provides tephra deposit load and ash concentration using PUFF, a Lagrangian model widely used to forecast volcanic ash dispersal during volcanic crisis. We perform a parametric study in order to analyze the influence of each input parameter on model outputs. For this test, we simulate two eruptive scenarios similar to the 2001 (Scenario 1) and 1998 (Scenario 2) Etna eruptions using high resolution weather data and a domain of 170×170km. Results show that for both scenarios, we are able to calculate the tephra deposit load and ash concentration but the use of millions of particles is required. Specifically, up to 33 and 220millions of particles were necessary to accurately predict the tephra deposit and ash concentration in air, respectively. This is approximately two orders of magnitude larger than the values typically considered running PUFF. The parametric study shows that the horizontal diffusion coefficient, the time step of the simulations, the topography and the standard deviation of the particle distribution greatly affect the model outputs. We also validate the model by best-fit procedures. Results show a good comparison between field data of the 2001 Etna eruption and PUFF simulations, being inside 5 and 1/5 times the observed data, comparable with results of Eulerian models. This work will allow to reliably outline the areas of contaminated airspace using PUFF or any other Lagrangian model in order to define the No Fly Zone and ensure the safety aviation operations as required after the Eyjafjallajökull eruption."
+}
