--- a/Generating_Model_to_Predict_the_Spread_of_Volcanic_Ash_Spread_by_using_Image-to-Image_Translation_of_Weather_Map.tex
+++ b/Generating_Model_to_Predict_the_Spread_of_Volcanic_Ash_Spread_by_using_Image-to-Image_Translation_of_Weather_Map.tex
@@ -17,20 +17,21 @@
 % to avoid loading the natbib package, add option nonatbib:
 \usepackage[nonatbib, preprint]{neurips_2019}
 
-\usepackage[utf8]{inputenc} % allow utf-8 input
-\usepackage[T1]{fontenc}    % use 8-bit T1 fonts
-\usepackage{hyperref}       % hyperlinks
-\usepackage{url}            % simple URL typesetting
-\def\UrlBreaks{\do\/\do-}   % To properly break the long url
-\usepackage{booktabs}       % professional-quality tables
-\usepackage{amsfonts}       % blackboard math symbols
-\usepackage{nicefrac}       % compact symbols for 1/2, etc.
-\usepackage{microtype}      % microtypography
+\usepackage[utf8]{inputenc}           % allow utf-8 input
+\usepackage[T1]{fontenc}              % use 8-bit T1 fonts
+\usepackage{hyperref}                 % hyperlinks
+\usepackage{url}                      % simple URL typesetting
+\def\UrlBreaks{\do\/\do-}             % To properly break the long url
+\usepackage{booktabs}                 % professional-quality tables
+\usepackage{amsfonts}                 % blackboard math symbols
+\usepackage{nicefrac}                 % compact symbols for 1/2, etc.
+\usepackage{microtype}                % microtypography
 
-\usepackage{setspace} % Double Spacing
-\usepackage{lmodern} % Font-size setting
-
-\usepackage[numbers,round]{natbib}
+\usepackage{setspace}                 % Double Spacing
+\usepackage{lmodern}                  % Font-size setting
+\usepackage{graphicx}                 % For Figures
+\usepackage[labelfont=bf]{caption}    % For Figures' Caption
+\usepackage[numbers,round]{natbib}    % For Citation
 
 \title{Generating Models to Predict the Spread of Volcanic Fallout Ash%
   by using conditional Generative Adversarial Network%
@@ -60,8 +61,6 @@
 }
 
 \begin{document}
-
-
 
 \maketitle
 
@@ -114,43 +113,77 @@
   scholars, still the needs of the calculation process last, which yet limiting the ability of 
   prediction to the computing power.
 
+  \fontsize{10pt}{10.5pt} \selectfont{
+    \begin{figure}
+      \centering
+      \includegraphics[width = \linewidth]{ModelStructure.jpg}
+      \caption{\textbf{Graphic Illustration of Generator's structure} \newline
+                Our generator gets the weather maps (both surface and upper air) and eruption scale 
+                parameters (Plume height, Plume shape, Volume of Emitted Ash, and the location of 
+                mountain) as an input to produce simulated result, the output.
+              }
+      \vspace{-5mm}
+      \label{fig1}
+    \end{figure}
+  }
+
   In this research, we are going to suggest a faster way to get the prediction on the pathway and 
   area that might be affected by volcanic fallout ash: Image-to-Image Translation. By utilizing the
   state-of-the-arts deep neural network, our goal includes verifying whether conditional Generative 
   Adversarial Network (cGAN) based deep neural network can extract the relationship between the flow
-  of air (represented by weather maps) and the spread of fallout ash.
+  of air (represented by surface and upper air weather maps) and the spread of fallout ash. 
+  (See \textbf{Figure \ref{fig1}} for the model's structure)
 }
 
 \section{Methods}  % TODO Review Requested
 \fontsize{11pt}{11pt} \selectfont {
   \paragraph{Data Collection}
   To achieve our goal, making a generator which predicts the possible area of ash spread for the 
-  given pair of weather maps, we first need to collect input and output data pairs. To collect 
-  these, for the input image, we will download those from the “Meteorological Data Open Portal” 
-  operated by the Korea Meteorological Administration (KMA)~\citep[from][]{MDOP}. To get the output 
-  data that will be paired with the weather maps, we will go through the traditional procedure with 
-  either the FALL3D or the Puff-UAF model.
+  given weather conditions and eruption scale, we first need to collect input and output data pairs.
+  To collect these, for the input images, we will download those from the “Meteorological Data Open 
+  Portal” operated by the Korea Meteorological Administration (KMA)~\citep[from][]{MDOP}. To get the
+  output data, we will go through the traditional procedure (simulation with VATDM).
   
-  The simulation parameters except for the weather data – plume height, number of particles to be 
-  predicted, and the mountain that has been erupted – will be set manually. To represent various 
+  The simulation parameters except for the weather data will be set manually. To represent various 
   eruption cases, for each mountain to be used as the sample, we will simulate with the constants 
   representing Volcanic Explosivity Index (VEI) 3 (Moderate Large Eruption), VEI 5 (Very Large 
-  Eruption), and VEI 7 (Massive Explosive Eruption)~\citep[p.1232]{Newhall1982}. The remaining, but
-  the most important, parameter for the simulation model, weather prediction data, will be obtained 
-  by the same location where we found the weather maps: download prediction made by RDAPS(regional 
-  data assimilation and prediction system)~\citep[from][]{MDOP}. These datasets are extremely huge: 
-  one day of weather data takes 1.32 GigaBytes, and we are thinking of getting at least 5 years of 
-  data for both training and testing sets. We need to find reliable storage to save all the weather 
-  data, weather maps, and output images.
+  Eruption), and VEI 7 (Massive Explosive Eruption)~\citep[p.1232]{Newhall1982}. The weather 
+  prediction data, will be obtained by the same location where we found the weather maps: download 
+  prediction made by RDAPS(regional data assimilation and prediction system)~\citep[from][]{MDOP}. 
+  % May Delete this part (Line Index 157 - 159)?
+  These datasets are extremely huge: one day of weather data takes 1.32 GigaBytes, and we are 
+  thinking of getting at least 5 years of data for both training and testing sets. We need to find 
+  reliable storage to save all the weather data, weather maps, and output images.
 
   \paragraph{Model structure}
-  Starting from conditional GAN, which has been shown to have better performance on generating 
-  indistinguishable images compare to the "real" images (\citet{isola2016imagetoimage}), we are 
-  going to choose proper loss function which has the best result on predicting the relationship 
-  between elements depicted on the weather maps to the spread of the ash. For the convolutions, we 
-  will use the U-Net architecture proposed by ~\citet{ronneberger2015unet}, as the architecture has 
-  been achieved a promising result on several different imaging 
-  tasks~\citep{isola2016imagetoimage, james2018simtoreal}.
+  We decide to use conditional GAN based model, which has been shown to have good performance on 
+  generating indistinguishable images compare to the \emph{real} images 
+  (\citet{isola2016imagetoimage}). The GAN has two distinctive parts of functions - Generator and 
+  Discriminator - and we need to fit both function simultaneously. The goal for the Discriminator is
+  to check whether the generated image is fake or not, while the Generator's goal is to make image, 
+  which enough to make the Discriminator to categorize it to a \emph{real} image. While the original
+  GAN only use a random noize to generate the output, the conditional GAN not only gets random noize
+  but also gets the \emph{condition} vectors as an input. For our model, the condition vector 
+  contains information of the weather maps and the eruption scale.
+
+  Comparing our model with Isola et al.\citep{isola2016imagetoimage}'s cGAN model, whlie Isola et 
+  al. provided only one image as an input, we have to pass not only the several weather map images 
+  but also the numerical vector indicating the eruption scale of the volcano. Moreover, while Isola 
+  et al.\citep{isola2016imagetoimage} challenged to provide randomness to their output, we want our 
+  model to provide same output when the same inputs have been provided. Lastly, our model needs to 
+  provide continuous images to represent the dispersion of volcaninc ash overtime, however, the 
+  Isola et al.\citep{isola2016imagetoimage}'s model only need to provide a still photograph as an 
+  output.
+
+  To contruct the model, we will use U-Net architecture, proposed by proposed by 
+  \citet{ronneberger2015unet}, for the convolutions to pass the information on the weather maps to 
+  the neural network. As U-Net architecture has achieved a promising result on several different 
+  image tasks\citep{isola2016imagetoimage,james2018simtoreal}, we are expecting that this 
+  architecture also works for our task. However, we still have to come up with a solution to pass 
+  information from several different images and one numerical vector to our neural network when we 
+  train our model. After that, we are going to choose proper loss functions that make the best 
+  result on predicting the relationship between elements depicted on the weather maps to the spread 
+  of the ash.
 
   \paragraph{Model Analysis and Experiments}
   While we mauver over various loss functions, we are going to make various models utilizing 
@@ -170,6 +203,27 @@
 
 \section{Timeline} % TODO Review Requested
 \fontsize{11pt}{11pt} \selectfont {
+  \fontsize{10pt}{10pt} \selectfont {
+    \begin{table}
+      \caption{Detailed Timeline}
+      \label{table1}
+      \centering
+      \begin{tabular}{lll}
+        \toprule
+        \cmidrule(r){1-2}
+        Due Date     & Task Description \\
+        \midrule
+        Mar. 14 & Select Proper VATDM to Generate Training/Testing Output \\ 
+        Mar. 20 & Collect Weather Maps and Weather Prediction Data \\
+        Apr. 10 & Run Simulation and Collect Outputs \\
+        Apr. 31 & Choose Candidates for Final Model's Structure \\
+        Jun. 15 & Conduct and Analyze Experiments on Each Models \\
+        Jul. 15 & Write Reports \\
+        \bottomrule
+      \end{tabular}
+    \end{table}
+  }
+
   The first thing we should do is to get the input. As there is no available API to get the weather 
   maps and data from KMA, but they provide an interactive website to download the data, it might 
   take some time to get all data manually. Moreover, the calculation time for that simulation was 
@@ -181,21 +235,18 @@
   The next step is to train the generator with a given input-output pair. To fit the conditional GAN
   based model and to verify the result with various test cases, we are expecting to take two 
   additional months here. For the last month of this research, we will write a report and posters.
+
+  The detailed timeline is on the \textbf{Table \ref{table1}}.
 }
 
 \section{Conclusion and Future Direction} % TODO Review Requested
 \fontsize{11pt}{11pt} \selectfont {
-  We are expected to have a faster way to predict possible pathway and area of volcanic fallout ash 
-  spread by using simpler and lighter input, weather maps, compare to the weather dataset predicted 
-  by RDAPS. Not only reduce the computing time to predict the spread, but the model aims to
-  reproduce as the same result as possible compares to the original training result.
-
-  Because of the weather maps’ style is different with the agencies that produce the map (National 
-  Oceanic and Atmospheric Administration (NOAA)’s way of making the map and KMA’s way of making the 
-  map is different), our model was not focused to produce an output from the maps that have been 
-  publicized by different agencies. Moreover, because of the limitation of the dataset, we are only 
-  able to train and test on the area near the Korean Peninsula; the models could not be verified on 
-  the different regional settings.
+  We are expected to make a deep neural network model to predict possible pathway and area of 
+  volcanic fallout ash spread faster than the previous methods, by using simpler and lighter input, 
+  weather maps, compare to the weather dataset predicted by RDAPS. Not only reduce the computing 
+  time to predict the spread, but the model aims to reproduce as the same result as possible 
+  compares to the original training result. To verify our idea and model structure, we utilize 
+  weather maps representing the weather conditions and volcanos near the Korean Peninsula.
 }
 
 \end{doublespacing}
