--- a/Deep_Learning-based_Approach_to_Prediction_of_Volcanic_Fallout_Spread.tex
+++ b/Deep_Learning-based_Approach_to_Prediction_of_Volcanic_Fallout_Spread.tex
@@ -64,11 +64,15 @@
 
 \begin{abstract}
   \fontsize{11pt}{11pt} \selectfont {
-    The abstract paragraph should be indented \nicefrac{1}{2}~inch (3~picas) on
-    both the left- and right-hand margins. Use 10~point type, with a vertical
-    spacing (leading) of 11~points.  The word \textbf{Abstract} must be centered,
-    bold, and in point size 12. Two line spaces precede the abstract. The abstract
-    must be limited to one paragraph.
+    The volcaninc fallout ash is one of the major causes making the volcanic eruption a fatal 
+    natural disaster. The spread of volcanic fallout is predicted by complex calculation which 
+    requires huge computing resources to make accurate prediction, and to get prediction result more
+    faster, the preivious researches focused on making lighter simulation model \cite{Searcy1998}, 
+    standardizing the variables used to simulate the spread \cite{Webley2009}, and increasing the 
+    efficiency of utilizing the simulated prediction and other informatino from different sources 
+    \cite{Sorokin2016}. Still, the needs for the complicated calculation last, therefore, our 
+    research wants to suggest a faster solution on predicting the volcanic fallout spread utilizing 
+    the state-of-the-arts deep learning model.
   }
 \end{abstract}
 
