--- a/neurips_2019.sty
+++ b/neurips_2019.sty
@@ -117,6 +117,8 @@
     textheight=9in,
     textwidth=5.5in,
     top=1in,
+    left=1in,
+    right=1in,
     headheight=12pt,
     headsep=25pt,
     footskip=30pt
